--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .wrapper {
     height: 100vh;
-    background: url(/img/фон1.jpg) no-repeat center / cover;
+    background: url(img/фон1.jpg) no-repeat center / cover;
     overflow: hidden;
     display: flex;
     flex-direction: column;
